Set vnet context in callouts and taskqueues.

PR:		164696